2011-01-26  Tony Chang  <tony@chromium.org>

        Unreviewed, marking fast/overflow/overflow-rtl-vertical.html as
        passing.  This was fixed in r76669.

        * platform/chromium/test_expectations.txt:

2011-01-26  Brian Weinstein  <bweinstein@apple.com>

        Skip fast/loader/willSendRequest-null-for-preload.html on WebKit2, because WebKit2 doesn't have
        setWillSendRequestReturnsNull yet.
        
        This is tracked by https://bugs.webkit.org/show_bug.cgi?id=42690.

        * platform/mac-wk2/Skipped:

2011-01-26  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Ryosuke Niwa.

        Update the test landed in r76701 to not depend on loading a "script" from http://example.com, make it
        use a local script (which still reproduces the crash).

        * fast/loader/resources/empty-script.js: Added.
        * fast/loader/willSendRequest-null-for-preload-expected.txt: Removed the line for the console error.
        * fast/loader/willSendRequest-null-for-preload.html: Have the script in the head be a local script.
        * platform/win/fast/loader: Removed.
        * platform/win/fast/loader/willSendRequest-null-for-preload-expected.txt: Removed. No need for platform-specific results.

2011-01-26  Ryosuke Niwa  <rniwa@webkit.org>

        Another unreviewed Chromium rebaselines for r76688.

        * platform/chromium-win/svg/batik/text/textEffect3-expected.checksum:
        * platform/chromium-win/svg/batik/text/textEffect3-expected.png:
        * platform/chromium-win/svg/custom/use-setAttribute-crash-expected.checksum:
        * platform/chromium-win/svg/custom/use-setAttribute-crash-expected.png:

2011-01-25  Brian Weinstein  <bweinstein@apple.com>

        Reviewed byAntti Koivisto.

        Crashes loading pages when cancelling subresource loads through WebKit
        https://bugs.webkit.org/show_bug.cgi?id=53123
        <rdar://problem/8914361>
        