@@ -1,0 +1,1 @@
+PASS: Adding animation events in the handler did not crash.
