@@ -1,3 +1,13 @@
+2011-01-26  Justin Schuh  <jschuh@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Make fireEventsAndUpdateStyle use stack local vectors.   
+        https://bugs.webkit.org/show_bug.cgi?id=46760
+
+        * animations/animation-add-events-in-handler-expected.txt: Added.
+        * animations/animation-add-events-in-handler.html: Added.
+
 2011-01-26  Tony Chang  <tony@chromium.org>
 
         Unreviewed, marking fast/overflow/overflow-rtl-vertical.html as
